# nutri

./: .gitignore  AGENTS.md  Makefile  README.md  nutri.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
hooks/: hook-rich.py
skills/: SKILL.md
src/nutricli/: __init__.py  __main__.py  cli.py  db.py  formatters.py  models.py  queries.py
tests/: test_cli_smoke.py  test_db.py  test_queries.py
